force-app/main/default/objects/Customer_Call_Automation__c/fields/New_Other_Expense_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Other_Expense_Cost__c</fullName>
    <label>New Other Expense Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>