force-app/main/default/objects/Customer_Call_Automation__c/fields/New_Primary_Residence_Costs__c.field-meta.xml
<CustomField>
    <fullName>New_Primary_Residence_Costs__c</fullName>
    <label>New Primary Residence Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>