force-app/main/default/objects/Customer_Call_Automation__c/fields/New_Recreation_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Recreation_Cost__c</fullName>
    <label>New Recreation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>