force-app/main/default/objects/Customer_Call_Automation__c/fields/No_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>No_of_Dependents__c</fullName>
    <formula>Party__r.clcommon__Contact__r.Number_Of_Dependents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>