force-app/main/default/objects/Customer_Call_Automation__c/fields/Non_Compulsory_Superannuation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Non_Compulsory_Superannuation_Comment__c</fullName>
    <label>Non-Compulsory Superannuation Comment</label>
    <type>TextArea</type>
</CustomField>