force-app/main/default/objects/Customer_Call_Automation__c/fields/Other_Living_Expenses_Comment__c.field-meta.xml
<CustomField>
    <fullName>Other_Living_Expenses_Comment__c</fullName>
    <label>Other Living Expenses Comment</label>
    <type>TextArea</type>
</CustomField>