force-app/main/default/objects/Customer_Call_Automation__c/fields/Other_Living_Expenses_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Other_Living_Expenses_Confirm__c</fullName>
    <inlineHelpText>Does this include all regular discretionary expenses such as holidays?</inlineHelpText>
    <label>Other Living Expenses Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>