force-app/main/default/objects/Customer_Call_Automation__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Customer Call Automations</relationshipLabel>
    <relationshipName>Customer_Call_Automations</relationshipName>
    <type>Lookup</type>
</CustomField>