force-app/main/default/objects/Customer_Call_Automation__c/fields/Primary_Residence_Costs_Comment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Residence_Costs_Comment__c</fullName>
    <label>Primary Residence Costs Comment</label>
    <type>TextArea</type>
</CustomField>