force-app/main/default/objects/Customer_Call_Automation__c/fields/Purchase_Section_Comment__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Section_Comment__c</fullName>
    <label>Purchase Section Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>