force-app/main/default/objects/Customer_Call_Automation__c/fields/Recreation_Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Recreation_Entertainment__c</fullName>
    <label>Recreation &amp; Entertainment</label>
    <type>TextArea</type>
</CustomField>