force-app/main/default/objects/Customer_Call_Automation__c/fields/Recreation_Entertainment_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Recreation_Entertainment_Confirm__c</fullName>
    <inlineHelpText>Does this include expenses such as movies, eating out, concerts?</inlineHelpText>
    <label>Recreation &amp; Entertainment  Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>