force-app/main/default/objects/Customer_Call_Automation__c/fields/Refinance_existing_mortgages_Comment__c.field-meta.xml
<CustomField>
    <fullName>Refinance_existing_mortgages_Comment__c</fullName>
    <label>Refinance existing mortgages Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>