force-app/main/default/objects/Customer_Call_Automation__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <formula>TEXT(Party__r.genesis__Application__r.Repayment_Type__c)  &amp; &quot; repayments;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repayment Type</label>
    <type>Text</type>
</CustomField>