force-app/main/default/objects/Customer_Call_Automation__c/fields/SMSF_Section_comment__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Section_comment__c</fullName>
    <label>SMSF Section comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>