force-app/main/default/objects/Customer_Call_Automation__c/fields/SMSF_Section_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>SMSF_Section_Render_Check__c</fullName>
    <formula>IF(ISPICKVAL(Party__r.Trust_Structure__c, &apos;SMSF&apos;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSF Section Render Check</label>
    <type>Checkbox</type>
</CustomField>