force-app/main/default/objects/Customer_Call_Automation__c/fields/Telephone_Internet_Pay_TV__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Internet_Pay_TV__c</fullName>
    <label>Telephone, Internet, Pay TV</label>
    <type>TextArea</type>
</CustomField>