force-app/main/default/objects/Customer_Call_Automation__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>