force-app/main/default/objects/Customer_Call_Automation__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>TEXT( Party__r.genesis__Application__r.genesis__Term__c  / 12) &amp; &quot; years.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term</label>
    <type>Text</type>
</CustomField>