force-app/main/default/objects/Customer_Call_Automation__c/fields/The_sources_of_funds_used_to_complete_th__c.field-meta.xml
<CustomField>
    <fullName>The_sources_of_funds_used_to_complete_th__c</fullName>
    <label>The sources of funds used to complete th</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>Loan (except this one)</fullName>
            </value>
            <value>
                <fullName>Sales proceeds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>