force-app/main/default/objects/Customer_Call_Automation__c/fields/The_Sources_of_income_contributing_to_th__c.field-meta.xml
<CustomField>
    <fullName>The_Sources_of_income_contributing_to_th__c</fullName>
    <label>The Sources of income contributing to th</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-employment income</fullName>
            </value>
            <value>
                <fullName>Employment (PAYG)</fullName>
            </value>
            <value>
                <fullName>Trust distribution</fullName>
            </value>
            <value>
                <fullName>Investment Income</fullName>
            </value>
            <value>
                <fullName>Retirement/pension income</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>