force-app/main/default/objects/Customer_Call_Automation__c/fields/Total_Business_Purpose_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Business_Purpose_Amount__c</fullName>
    <formula>Party__r.genesis__Application__r.Buy_Asset_Investment_Amount__c  +  Party__r.genesis__Application__r.Marketing_Advertising_Amount__c + Party__r.genesis__Application__r.Business_Other_Amount__c +
Party__r.genesis__Application__r.Purchase_Business_Amount__c +
Party__r.genesis__Application__r.Working_Capital_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Business Purpose Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>