force-app/main/default/objects/Customer_Call_Automation__c/fields/Total_Cash_Out_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Out_Amount__c</fullName>
    <formula>Party__r.genesis__Application__r.Divorce_Settlement_Amount__c + 
Party__r.genesis__Application__r.Holiday_Travel_Amount__c +
Party__r.genesis__Application__r.Home_Imaprovements_Amount__c +
Party__r.genesis__Application__r.Cash_Out_Other_Amount__c +
Party__r.genesis__Application__r.Personal_Investments_Amount__c +
Party__r.genesis__Application__r.Property_Purchase_Amount__c +
Party__r.genesis__Application__r.Purchase_Goods_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cash Out Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>