force-app/main/default/objects/Customer_Call_Automation__c/fields/Total_Construction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_Amount__c</fullName>
    <formula>Party__r.genesis__Application__r.House_dewelling_Amount__c +
Party__r.genesis__Application__r.Other_dewelling_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Construction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>