force-app/main/default/objects/Customer_Call_Automation__c/fields/Transport_Comment__c.field-meta.xml
<CustomField>
    <fullName>Transport_Comment__c</fullName>
    <label>Transport Comment</label>
    <type>TextArea</type>
</CustomField>