force-app/main/default/objects/Customer_Call_Automation__c/fields/Transport_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Transport_Confirm__c</fullName>
    <inlineHelpText>Does this include registration, public transport, petrol and tolls?</inlineHelpText>
    <label>Transport Confirm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>