force-app/main/default/objects/Customer_Call_Automation__c/fields/Your_Role_in_the_company__c.field-meta.xml
<CustomField>
    <fullName>Your_Role_in_the_company__c</fullName>
    <label>Your Role in the company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>